# python-project-lvl4

./: .djlintrc  .editorconfig  .env-sample  .env.dev  .flake8  .gitignore  CHECKS  DOKKU.md  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
task_manager/: settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  home.html
task_manager/users/: admin.py  apps.py
task_manager/users/tests/: test_admin.py  test_models.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
users/tests/: test_admin.py  test_models.py
