[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["n8creator <n8creator@pm.me>"]

[tool.poetry.dependencies]
python = "~3.10.0"
Django = "^4.0.5"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
