[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["n8creator <n8creator@pm.me>"]
packages = [
    {include = "task_manager"},
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
whitenoise = "^6.2.0"
django-bootstrap4 = "^22.1"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
