[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple Task Manager App Written on Django 5.0 (inspired by Redmine CRM). This is Educational Project by Hexlet.io School"
authors = ["n8creator <n8creator@pm.me>"]
readme = "README.md"
packages = [
	{include = "hexlet_code"}
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-filter = "^23.5"
django-bootstrap5 = "^23.3"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-xdist = "^3.5.0"
pytest-django = "^4.7.0"


[tool.poetry.group.code-quality.dependencies]
flake8 = "^6.1.0"
isort = "^5.13.1"
black = "^23.12.0"
djlint = "^1.34.0"


[tool.poetry.group.utils.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
